package dominio;

public interface Usuario {
    String getNombre();
    String getRol();
    int getLimitePrestamos();
}
